--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,24 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.todo-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.todo-footer p {
+  font-weight: 600;
+  color: grey;
+}
+
+.todo-footer a {
+  font-weight: 600;
+  color: grey;
+  text-decoration: none;
+}
+
+img,
+svg {
+  vertical-align: middle;
+}
