--- a/styles/FollowersList.module.css
+++ b/styles/FollowersList.module.css
@@ -17,6 +17,7 @@
   border-bottom: 0.05rem solid rgba(0, 0, 0, 0.082);
   padding: 1rem 0;
   align-items: center;
+  cursor: pointer;
 }
 .followersDetails {
   margin-left: 1.25rem;
